--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -7,62 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/Engine.Engine]
-+ActiveGameNameRedirects=(OldGameName="TP_BlankBP",NewGameName="/Script/UnrealEngine")
-+ActiveGameNameRedirects=(OldGameName="/Script/TP_BlankBP",NewGameName="/Script/UnrealEngine")
-
-[/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/MyMap.MyMap
-GameDefaultMap=/Game/Maps/MyMap.MyMap
-GlobalDefaultGameMode=/Game/Blurprints/BpMyGameModeBase.BpMyGameModeBase_C
-
-[/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
-bBuildForArm64=True
-bSupportsVulkan=True
-bBuildForES31=True
-bBuildForArmV7=False
-MinSDKVersion=25
-TargetSDKVersion=29
-InstallLocation=Auto
-
-[/Script/LinuxTargetPlatform.LinuxTargetSettings]
-SpatializationPlugin=
-ReverbPlugin=
-OcclusionPlugin=
-SoundCueCookQualityIndex=-1
--TargetedRHIs=SF_VULKAN_SM5
-+TargetedRHIs=SF_VULKAN_SM5
-+TargetedRHIs=SF_VULKAN_ES31
-
-[/Script/LuminRuntimeSettings.LuminRuntimeSettings]
-IconModelPath=(Path="")
-IconPortalPath=(Path="")
-
-[/Script/WindowsTargetPlatform.WindowsTargetSettings]
-Compiler=Default
--TargetedRHIs=PCD3D_SM5
-+TargetedRHIs=PCD3D_SM5
-+TargetedRHIs=SF_VULKAN_SM5
-DefaultGraphicsRHI=DefaultGraphicsRHI_Vulkan
-MinimumOSVersion=MSOS_Vista
-bTarget32Bit=False
-AudioSampleRate=48000
-AudioCallbackBufferFrameSize=1024
-AudioNumBuffersToEnqueue=1
-AudioMaxChannels=0
-AudioNumSourceWorkers=4
-SpatializationPlugin=
-ReverbPlugin=
-OcclusionPlugin=
-CompressionOverrides=(bOverrideCompressionTimes=False,DurationThreshold=5.000000,MaxNumRandomBranches=0,SoundCueQualityIndex=0)
-bUseAudioStreamCaching=False
-CacheSizeKB=0
-bResampleForDevice=False
-MaxSampleRate=0.000000
-HighSampleRate=0.000000
-MedSampleRate=0.000000
-LowSampleRate=0.000000
-MinSampleRate=0.000000
-CompressionQualityModifier=0.000000
-AutoStreamingThreshold=0.000000
-SoundCueCookQualityIndex=-1
++ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/Host")
++ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Host")
++ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="HostGameModeBase")
 
