[Update] edit build config files

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -11,3 +11,6 @@ AppliedDefaultGraphicsPerformance=Maximum
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/Host")
 +ActiveClassRedirects=(OldClassName="TP_BlankGameModeBase",NewClassName="HostGameModeBase")
 
+[/Script/EngineSettings.GameMapsSettings]
+GlobalDefaultGameMode=/Script/Host.HostGameModeBase
+
