[Update] project setting

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,6 +13,8 @@ AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
 GlobalDefaultGameMode=/Script/Host.HostGameModeBase
+GameDefaultMap=/Game/Maps/EmptyMap.EmptyMap
+EditorStartupMap=/Game/Maps/EmptyMap.EmptyMap
 
 [/Script/AndroidRuntimeSettings.AndroidRuntimeSettings]
 bBuildForArm64=True
